Repositórios em memória para testes. Repositórios do app implementam interface customizada. JpaRepository usado como adapter.